--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -11,3 +11,8 @@ block content
         input(name="name", type="text", placeholder="name", required)
         input(name="location", type="text", placeholder="location")
         input(type="submit", value="Join")
+    hr
+    div
+        span Already have an account?
+        br
+        a(href="/login") Log in now &rarr;
