--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="ko")
     head
-        title #{pageTitle} | Wetube
+        title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://unpkg.com/mvp.css" )
     body 
         header 
@@ -10,12 +10,22 @@ html(lang="ko")
                 ul 
                     li 
                         a(href="/") Home
-                    li
-                        a(href="/videos/upload") Upload Video
-                    li
-                        a(href="/search") Search Video
-                    li
-                        a(href="/join") Join
+                    
+                    if loggedIn 
+                        li
+                            a(href="/user/mypage") MyPage
+                        li
+                            a(href="/user/logout") Logout
+                        li
+                            a(href="/videos/upload") Upload Video
+
+                    else
+                        li
+                            a(href="/search") Search Video
+                        li
+                            a(href="/login") LogIn
+                        li
+                            a(href="/join") Join
         main 
             block content
             
