Session for User permission 2

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -9,6 +9,6 @@ block content
         input(type="submit", value="Login")
     hr
     div
-        span Don't have an account?
+        span Don't have an account?!
         br
         a(href="/join") Log in now &rarr;
