MongoDB for Session

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -13,7 +13,7 @@ html(lang="ko")
                     
                     if loggedIn 
                         li
-                            a(href="/user/mypage") MyPage
+                            a(href="/user/mypage") #{username}
                         li
                             a(href="/user/logout") Logout
                         li
